--- a/html/views/labelManagement.html
+++ b/html/views/labelManagement.html
@@ -224,7 +224,7 @@
 
     };
 
-    updateEvent = function() {
+    updateEvent = function(el) {
       var partId = $(el).parents('tr').attr('p-key');
       // 更新全局TARGET
       TARGET_ROW_SET = getTarget('partId', partId);
@@ -251,7 +251,7 @@
       });
     };
 
-    deleteEvent = function() {
+    deleteEvent = function(el) {
       var partId = $(el).parents('tr').attr('p-key');
       // 更新全局TARGET
       TARGET_ROW_SET = getTarget('partId', partId);
